# Research_Collector

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: author_affiliation_reputation.yaml  concepts.yaml  query_profiles.yaml  seminal_papers.yaml  settings.yaml  sources.yaml  topic_key_remap_2026-04.yaml  topics.yaml  transcript_terms.yaml  venue_reputation.yaml  youtube_channels.yaml
digests/: 2026-04-08-batch-review.md  2026-04-08-frontier-followup-pack.md  2026-04-08-recent-high-quality-shortlist.md  2026-04-08-start-here.md  2026-04-08-three-paper-study-guide.md  2026-04-08-weekly.md  2026-04-08-youtube-review.md  2026-04-08-youtube-study-companion.md  reading_list.md
docs/: digest_conventions.md  venue_screening_policy.md  wsa_mineru_pdf_workflow.md
knowledge_cards/: README.md  elbo-derivation.md  flow-matching-vs-score-based.md  neural-ode-sde.md
knowledge_map/: overview.md  reading_paths.md  theory_landscape.md
scripts/: audit_transcript_with_llm.py  cleanup_noise_papers.py  cleanup_slide_assets.py  collect.py  extract_pdf_page_images.py  extract_pdfs_via_wsa.py  extract_video_slides.py  generate_collection_review.py  generate_frontier_followup.py  migrate_add_venues_and_coauthors.py  migrate_topic_prefix.py  reclassify_papers.py  refine_youtube_transcript.py  remap_topic_keys.py  rename_mineru_images.py  rescore_papers.py  review_collection_batch.py  review_youtube_resources.py  run_youtube_study_pack.sh  seed_seminal.py  setup_scheduler.py  split_research_skills.py  transcribe_youtube.py  wsa_ensure_mineru_api.sh
(+175 files in other folders)
